turn many css's to one

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Fedorov Web</title>
 </head>
 <body id="body">
@@ -186,5 +188,6 @@ $hosting->deploy($mySite);
         </div>
     </div>
 </main>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
