add letter box styles

--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@ $hosting->deploy($mySite);
         <h2 class="contact-box__title">Как мне написать.</h2>
         <div class="contact-box__box email-box">
             <div class="contact-box__box__decor-image"></div>
-            <div style="text-align:center;">medbrat1994@gmail.com</div>
+            <div class="contact-box__box__email-address" style="text-align:center;">medbrat1994@gmail.com</div>
+        </div>
+        <div class="contact-box__delimiter">
+            <span class="contact-box__delimiter__text">или</span>
         </div>
         <div class="contact-box__box social-box">
             <a href="https://vk.com/id442915824" class="contact-box__box__social-link vk-link" target="_blank">Вконтакте</a>
